src/sass/blocks/footer.scss
// Footer

.footer {
  background-color: var(--_beige);
  margin-top: 75px;

  @include tablet {
    margin-top: 135px;
  }
}

.footer__inner {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  row-gap: 7px;
  padding: 21px;
  max-width: 1170px;
  margin: 0 auto;

  p {
    margin: 0;
    font-size: 16px;
    font-weight: 400;
    line-height: 22px;
    color: var(--_gray);
  }


  @include tablet {
    padding: 30px 53px;
    flex-direction: row;
    justify-content: space-between;

    p {
      font-size: 20px;
      line-height: 28px;
    }
  }
}


.footer__list {
  @include overlay;
  display: flex;
  align-items: center;
  gap: 15px;

  li {
    display: flex;
    align-items: center;
  }

  a {
    display: inline-flex;
    align-items: center;
    font-size: 16px;
    font-weight: 400;
    line-height: 22px;
    text-decoration: none;
    color: var(--_basic-black);
    gap: 5px;

    @media (any-hover: hover) {
      &:hover {
        text-decoration-line: underline;
        text-underline-offset: 5px;
      }
    }

    &:active {
      color: var(--_orange);
    }
  }

  @include tablet {
    gap: 23px;

    a {
      font-size: 20px;
      line-height: 28px;
      gap: 12px;
      /* stylelint-disable-next-line */
      svg {
        width: 26px;
        height: 26px;
      }
    }
  }
}

